<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_location">Location</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_label_lat">Latitude</string>
    <string name="pref_location_key_lat" translatable="false">location_lat</string>
    <string name="pref_location_lat" translatable="false">59.529</string>
    <string name="pref_location_default_lat" translatable="false">59.529</string>



    <string name="pref_location_label_long">Longitude</string>
    <string name="pref_location_key_long" translatable="false">location_long</string>
    <string name="pref_location_long" translatable="false">18.045</string>
    <string name="pref_location_default_long" translatable="false">18.045</string>




    <string-array name="pref_degree_unit_entries">
        <item>Kelvin</item>
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_degree_unit_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_degree_unit_default">1</string>
    <string name="pref_degree_unit_key">degree_unit</string>
    <string name="pref_degree_unit_title">Displayed unit</string>

</resources>
